kube/issuance-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuance-deployment
  labels:
    app: issuance-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: issuance-service
  template:
    metadata:
      labels:
        app: issuance-service
    spec:
      containers:
        - name: issuance-service
          image: backend-issuance-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
          volumeMounts:
            - name: shared-storage
              mountPath: /app/shared
      volumes:
        - name: shared-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
spec:
  selector:
    app: issuance-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
