kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-credential-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube-credential.local
      http:
        paths:
          - path: /issue
            pathType: Prefix
            backend:
              service:
                name: issuance-service
                port:
                  number: 4001
          - path: /verify
            pathType: Prefix
            backend:
              service:
                name: verification-service
                port:
                  number: 4002
